Further alpha development

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Unbedingt ändern, stark & geheim halten:
+# Unbedingt setzen (lang & zufällig):
 SECRET_KEY=change-this-to-a-long-random-string
-# Für den Bootstrap-Link im Terminal (z.B. hinter Reverse Proxy):
+
+# Für Bootstrap-Link in der Konsole (z. B. hinter Reverse Proxy):
 EXTERNAL_URL=http://127.0.0.1:5000
